--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bdb565">  <td>18/05/17 22:27:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HeadlessTest.test()[pri:0, instance:headles.cucumber.project.headles.cucumber.project.HeadlessTest@18bf3d14]">test</td> 
-  <td>main@146305349</td>   <td></td> </tr>
+<tr bgcolor="daefa0">  <td>18/05/18 00:24:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AbstractTestNGCucumberTests.setUpClass()[pri:0, instance:headles.cucumber.project.headles.cucumber.project.TestRunner@2641e737]">&gt;&gt;setUpClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1991313236</td>   <td></td> </tr>
+<tr bgcolor="daefa0">  <td>18/05/18 00:24:02</td>   <td>377</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AbstractTestNGCucumberTests.feature(cucumber.api.testng.CucumberFeatureWrapper)[pri:0, instance:headles.cucumber.project.headles.cucumber.project.TestRunner@2641e737]">feature</td> 
+  <td>main@1991313236</td>   <td></td> </tr>
+<tr bgcolor="daefa0">  <td>18/05/18 00:24:05</td>   <td>3678</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AbstractTestNGCucumberTests.tearDownClass()[pri:0, instance:headles.cucumber.project.headles.cucumber.project.TestRunner@2641e737]">&lt;&lt;tearDownClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1991313236</td>   <td></td> </tr>
 </table>
